@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-shell.in,v 1.5 2004/02/22 12:06:31 tahara Exp $
+;; $Id: kahua-shell.in,v 1.6 2004/02/23 07:18:43 tahara Exp $
 
 (use srfi-1)
 (use gauche.net)
@@ -25,14 +25,17 @@
        login-processor)
      (lambda ()
        (display "Welcome to Kahua.") (newline)
-       (let ((username (begin (format #t "username: ")
+       (let* ((user-mode (ref (kahua-config) 'user-mode))
+              (username (or user-mode
+                            (begin
+                              (format #t "username: ")
                               (flush)
-                              (read-line)))
-             (password (if (sys-getenv "TERM")
-                         (get-password "password: ")
-                         (begin (format #t "password: ")
-                                (flush)
-                                (read-line)))))
+                              (read-line))))
+              (password (if (sys-getenv "TERM")
+                          (get-password "password: ")
+                          (begin (format #t "password: ")
+                                 (flush)
+                                 (read-line)))))
          (cond ((find eof-object? (list username password)) (exit 0))
                ((kahua-check-developer username password)
                 select-worker-processor)
